<resources>
    <string name="app_name">SonicSoul</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="login_exception">Login exception</string>
    <string name="music_load_exception">Music load exception</string>
    <string name="local_music">Local music</string>
    <string name="online_music">Online music</string>
    <string name="need_authorize">You must be logged in \n to access online music</string>
    <string name="login_text">Log in</string>
    <string name="setup_local_directory">Show</string>

    <string name="delete_song">Delete</string>
    <string name="save_song">Save</string>

    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>

    <string name="welcome_title">Welcome\n to the Sonic Soul!</string>
    <string name="need_local_setup">For the purpose of initial setup of the application, select the folder where your local music is located</string>

    <string name="settings_audio">Audio</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_service">Online service</string>
    <string name="settings_visual">Visual</string>


    <string name="settings_enable_gapless">Enable gapless effect</string>
    <string name="settings_change_local_directory">Change local music directory</string>
    <string name="settings_change_visual">Change app color theme</string>
    <string name="settings_change_eq">Change equalizer</string>


    <string name="need_local_setup_rus">В целях первичной настройки приложения, выберите папку, где расположена ваша локальная музыка</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>